--- a/config.conf
+++ b/config.conf
@@ -3,8 +3,8 @@
 # * Fill the Required Variables
 season="1"
 episode="01" 
-total_frame="4000" # total frames cutted
-img_fps="" # the fps of the cutted frames
+total_frame="3121" # total frames cutted
+img_fps="2" # the fps of the cutted frames
 
 # (Optional) You needed this if you're gonna use Subtitle comment
 vid_fps="" # the fps of the original video
