--- a/config.conf
+++ b/config.conf
@@ -7,8 +7,8 @@ total_frame="3121" # total frames cutted
 img_fps="2" # the fps of the cutted frames
 
 # (Optional) You needed this if you're gonna use Subtitle comment
-vid_fps="" # the fps of the original video
-vid_totalfrm="" # total frames in an original video
+vid_fps="24" # the fps of the original video
+vid_totalfrm="36431" # total frames in an original video
 
 # message/caption formatting (supports emoji/hashtags)
 # available variables are:
@@ -52,7 +52,7 @@ fph="15"
 
 # Minutes interval of posting (Default is 2)
 # Note: Don't set it lower than a minute, you might get detected as a spam of Facebook. and Setting it Higher will cause duplication of posting.
-mins="2"
+mins="3"
 
 # Delay of the Each action (in seconds), (Default is 3)
 delay_action="3"
