--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@
 
 # * Fill the Required Variables
 season="1"
-episode="01" 
+episode="02" 
 total_frame="3121" # total frames cutted
 img_fps="2" # the fps of the cutted frames
 
@@ -28,7 +28,7 @@ message='Season {season}, Episode {episode}, Frame {prev_frame} out of {total_fr
 #    {fph}:             (shows the rate of posting)
 #    {ovr_all}:         (total count of frames posted)
 #    {\n}:              (new-line character)
-abt_txt='Chopped {img_fps} FPS, Posting {fph} Frames every 2 hours.{\n}Total of "{ovr_all}" frame was successfully posted!!'
+abt_txt='Page dedicated to posting all the frames of the Frieren anime in order'
 
 
 # This filename must be exact at the subtitle file on fb directory, We don't use glob/filename-wildcards to avoid matching multiple files
@@ -45,7 +45,7 @@ giphy_tags="anime"	# Insert your custom Tags here. Delimited by ","
 gif_prev_framecount="10"
 
 # This is where you will paste the manually created Album ID, (When nothing is provided, it will not collect the photo posted in an Album)
-album="122105157170068249"
+album="122111791376068249"
 
 # Number frames that will be posted after the execution (Default is 15)
 fph="15"
