--- a/config.conf
+++ b/config.conf
@@ -28,7 +28,7 @@ message='Season {season}, Episode {episode}, Frame {prev_frame} out of {total_fr
 #    {fph}:             (shows the rate of posting)
 #    {ovr_all}:         (total count of frames posted)
 #    {\n}:              (new-line character)
-abt_txt='Page dedicated to posting all frames from the anime Frieren: Frames https://l1nk.dev/FramesFrieren'
+abt_txt='Page dedicated to posting all frames from the anime Frieren'
 
 
 # This filename must be exact at the subtitle file on fb directory, We don't use glob/filename-wildcards to avoid matching multiple files
